<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="#34495e"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_conlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/bt_card_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/tv_card_value_description"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_card_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_card_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_card_item_name" />

        <TextView
            android:id="@+id/tv_card_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_card_quantity" />

        <TextView
            android:id="@+id/tv_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_card_cost" />

        <TextView
            android:id="@+id/tv_card_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frozen_item"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_card_description" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/tv_card_value_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="name"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_card_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

        <TextView
            android:id="@+id/tv_card_value_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="false"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_card_frozen"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

        <TextView
            android:id="@+id/tv_card_value_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="description"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_card_description"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

        <TextView
            android:id="@+id/tv_card_value_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cost_default"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_card_cost"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

        <TextView
            android:id="@+id/tv_card_value_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/quantity_default"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_card_quantity"
            card_view:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>